Add system diagnostics, log management, auto-update timer, and canary release support
- Implement doctor and logs commands for system health checks and log viewing
- Add interactive installation wizard to InstallCommand
- Enhance update command with auto-update timer, changelog, config diff, and canary release features
- Improve service management with log rotation and persistent logging
- Update ServeCommand to support config and port overrides
- Extend config and version properties for new features
- Update README with usage and feature documentation